# bmstu-dips-course

./: .env  .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md  config.yaml  deployment.yml  docker-compose.yml  rusty-tags.vi
application_server/: Cargo.toml
auth_server/: Cargo.toml
deployments/: crud.yml  keel.yml  ngrok.yml  redis-master.yml
src/: appconfig.rs  common.rs  config.rs  main.rs  wallet.rs
src/handlers/: tasks.rs
