[package]
name = "bmstu-dips-course"
version = "0.1.0"
authors = ["Kamakin Andrey <a.kamakin@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0"
actix-session = "0.2.0"
actix-redis = { version = "0.6.0", features = ["web"] }
listenfd = "0.3"
serde = "1.0.100"
serde_json = "1.0.40"
yaml-rust = "0.4"
