[package]
name = "bmstu-dips-course"
version = "0.1.0"
authors = ["Kamakin Andrey <a.kamakin@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.8"
actix-web = "1.0"
actix-redis = "0.6"
redis-async = "0.4"
futures = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
listenfd = "0.3"
dotenv = "0.14"
